--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
                 <div class="header__menu-wrapper">
                     <ul class="header__menu-list" id="menu">
                         <li class="header__menu-item">
-                            <a href="#" class="header__menu-link">
+                            <a href="#" class="header__menu-link" data-translate="menuMain">
                                 main
                             </a>
                         </li>
                         <li class="header__menu-item">
-                            <a href="#" class="header__menu-link">
+                            <a href="#" class="header__menu-link" data-translate="menuAbout">
                                 about
                             </a>
                         </li>
                         <li class="header__menu-item">
-                            <a href="#" class="header__menu-link">
+                            <a href="#" class="header__menu-link" data-translate="menuFeatures">
                                 game features
                             </a>
                         </li>
                         <li class="header__menu-item">
-                            <a href="#" class="header__menu-link">
+                            <a href="#" class="header__menu-link" data-translate="menuSystem">
                                 system requirements
                             </a>
                         </li>
                         <li class="header__menu-item">
-                            <a href="#" class="header__menu-link">
+                            <a href="#" class="header__menu-link" data-translate="menuQuotes">
                                 quotes
                             </a>
                         </li>
