--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
                 </div>
             </div>
         </section>
+        <section class="about">
+            <div class="about__background">
+                <img src="./img/bg2.jpeg" alt="">
+            </div>
+            <div class="container">
+                <div class="about__wrapper">
+                    <div class="about__content">
+                        <div class="about__question">
+                            What is SOS?
+                        </div>
+                        <div class="about__title">
+                            social battle royale game
+                        </div>
+                        <div class="about__story-game">
+                            Each round, you and 15 other contestants compete toescape a deadly island filled with monsters. The trick is: three people can survive. Will you runsolo or form friendships with others to escape? 
+
+                            Making the right decisions could be thedifference between life and death.
+                        </div>
+                    </div>
+                    <div class="about__slider">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./js/script.js"></script>
 </body>
