--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <div class="about__story-game">
                             Each round, <span>you</span> and <span>15</span> other contestants compete toescape a deadly island filled with monsters. The trick is: <span>three</span> people can survive. Will you runsolo or form friendships with others to escape? 
 
-                            Making the right decisions could be thedifference between life and death.
+                            Making the right decisions could be thedifference between <span class="line-story">life and death</span>.
                         </div>
                     </div>
                     <div class="swiper mySwiper">
@@ -127,7 +127,7 @@
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
-                    <img class="swiper-button-next" src="./img/slider/switch.svg" alt="">
+                    <!-- <img class="swiper-button-next" src="./img/slider/switch.svg" alt=""> -->
                 </div>
             </div>
         </section>
